# rustdump

./: Cargo.toml  README.md
src/: main.rs
src/dump/: directdump.rs  fockdump.rs  mod.rs
