[package]
name = "clinet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.32.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
    "Win32_System_Kernel",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
]

[dependencies]
winapi = { version = "0.3", features = ["winbase","fileapi","ntdef","winnt","guiddef","minwindef","handleapi","basetsd","memoryapi","processthreadsapi","synchapi","processenv","errhandlingapi","ntstatus","userenv","securitybaseapi"] }
ntapi = "0.3.7"
widestring = "0.5.1"
kernel32-sys = "0.2.2"